test/programs/good/check-terms-precedence/let_sugar_simple_followed_by_list_element.lq
fun :: Qbit
fun = var1 <- term1 ; [x] !! 1
