test/programs/bad/function_has_list_arg__IncorrectNumberOfFunctionArguments.lq
fun :: [Qbit] -> Bit
fun list arg  = 1

main :: Bit
main = other
